alignement et correction des définitions de table: 1/2 devient 1/3

--- a/style.css
+++ b/style.css
@@ -7,19 +7,23 @@
   }
   .un {
     grid-column: 1;
-    grid-row: 1 / 2;
+    grid-row: 1 / 3;
+    text-align: left;
   }
   .deux { 
     grid-column: 2;
     grid-row: 1;
+    text-align: center;
   }
   .trois {
     grid-column: 3;
-    grid-row: 1 / 2;
+    grid-row: 1 / 3;
+    text-align: right;
   }
   .quatre {
     grid-column: 2;
     grid-row: 2;
+    text-align: center;
   }
   .cinq {
     grid-column: 1 / 3;
